--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">androidcrud</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="vertical_ellipsis">&#8942;</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
